postcompile/src/snapshots/postcompile__tests__compile_success.snap
---
source: postcompile/src/lib.rs
expression: out
---
exit status: 0
--- expanded
#![feature(prelude_import)]
extern crate std;
#[prelude_import]
use std::prelude::rust_2024::*;
#[allow(unused)]
fn main() {
    let a = 1;
    let b = 2;
    let c = a + b;
}
