postcompile/src/snapshots/postcompile__tests__compile_tests.snap
---
source: postcompile/src/lib.rs
expression: out
---
exit status: 0
--- test_stdout
running 1 test
.
test result: ok. 1 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out; finished in [ELAPSED]s
--- expanded
#![feature(prelude_import)]
extern crate std;
#[prelude_import]
use std::prelude::rust_2024::*;
#[allow(unused)]
fn fib(n: i32) -> i32 {
    match n {
        i32::MIN..=0 => 0,
        1 => 1,
        n => fib(n - 1) + fib(n - 2),
    }
}
